<resources>
    <string name="app_name">Wat2Watch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_background_image_description">login background image</string>
    <string name="login_subheading">reel fun movie nights with friends</string>
    <string name="sign_in">Sign In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="forgot_password">
        <u>Forgot password?</u>
    </string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="wat2watch_logo">wat2watch logo</string>
    <string name="new_to_wat2watch">New to Wat2Watch? <u>Create an account</u></string>
    <string name="default_web_client_id">323875359522-gq59u1q98bhom7p4nqc4843h9aoarm7a.apps.googleusercontent.com
    </string>
</resources>