<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/login_background_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Wat2Watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rainyhearts"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="64sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        />

    <TextView
        android:id="@+id/login_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        android:text="@string/login_subheading"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Wat2Watch" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        android:lineSpacingExtra="0dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />


    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        android:labelFor="@id/email_field"
        android:text="@string/email_label"
        android:textAlignment="textStart"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="76dp"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:autofillHints=""
        android:background="@drawable/sign_field_background"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        app:layout_constraintStart_toStartOf="@id/email_label"
        />


    <TextView
        android:id="@+id/password_label"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        android:text="@string/password_label"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/email_field"
        app:layout_constraintStart_toStartOf="@id/email_field"
        android:textAlignment="textStart"
        android:textSize="16sp"
        />


    <EditText
        android:id="@+id/password_area"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:background="@drawable/sign_field_background"
        app:layout_constraintTop_toBottomOf="@id/password_label"
        app:layout_constraintStart_toStartOf="@id/password_label"
        />



        <TextView
        android:id="@+id/forgot_password"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/password_area"
        app:layout_constraintStart_toStartOf="@id/password_area"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        android:textColor="#757575"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:text="@string/sign_in_button_text"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/sign_in_button_background"
        app:backgroundTint="#C9DBEF"
        android:textColor="#000"
        android:textAllCaps="false"
        android:padding="0dp"
        android:letterSpacing="-0.01"
    />

    <TextView
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:text="@string/or"
        android:fontFamily="@font/nunito_sans_7pt_condensed_medium"
        android:textColor="#757575"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/submit_button"
        app:layout_constraintStart_toStartOf="@id/submit_button"
        app:layout_constraintEnd_toEndOf="@id/submit_button"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>